src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Dealer_Smart_Sub_Region__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Subregion of Smart dealer 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Dealer is &quot;Dealer_RegionSubSmart&quot;</description>
        <label>Dealer Smart Sub-Region</label>
        <picklist>
            <picklistValues>
                <fullName>NORTH1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAST2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Driver_License_Year__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Year the contact got driver&apos;s license 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_DriversLicenseYear&quot;</description>
        <label>Driver License Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Whether the person has driver&apos;s license or not 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_DriversLicenseFlag&quot;</description>
        <label>Driver License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dup_Reason__c</fullName>
        <description>Duplication reason for suspected duplication to be filled by EP</description>
        <label>Dup Reason</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dupe_Merge__c</fullName>
        <formula>IF(AND(ISNumber( DUP_Nummer__c), NOT(Master_Record__c)),   HYPERLINK(&apos;/apex/AccountMerge?id=&apos; +  Id , &apos;Merge &apos; + DUP_Nummer__c ), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dupe Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dupe_Reject__c</fullName>
        <formula>IF(AND(ISNumber( DUP_Nummer__c), NOT(Master_Record__c)), HYPERLINK(&apos;/apex/AccountMerge?id=&apos; + Id , &apos;Reject &apos; + DUP_Nummer__c ), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dupe Reject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: The education level of the person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_Education&quot;</description>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>Elementary school</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Formal Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University-Chinese Mainland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University-Foreign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate or Above-Chinese Mainland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate or Above-Foreign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Validity__c</fullName>
        <label>Email Validity</label>
        <picklist>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blacklisted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extension_Number__c</fullName>
        <label>Extension Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Validity__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag whether the fax number is valid 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_FaxValidity&quot;</description>
        <label>Fax Validity</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blacklisted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Gender of the person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_Gender&quot;</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gov_Background__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag if the customer or any family members 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_BackgroundGov&quot;</description>
        <label>Gov Background</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hobby__c</fullName>
        <description>Hobbies of the customer
Attribute in Data Dictinary &quot;Pref_Details&quot; of object &quot;Preference&quot;</description>
        <label>Hobby</label>
        <picklist>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bowling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weight Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese traditional opera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collecting (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collecting (antiques)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collecting (watches)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collecting (wine/gin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collecting (Cigars)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martial Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swimming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basketball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tennis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badminton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art(photography)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Household_Amount__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Number of people in household 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_HouseholdAmount&quot;</description>
        <label>Household Amount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Identification Number 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>ID Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Type__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Should this be a pick list? If so, which values are to be available 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_IDType&quot;</description>
        <label>ID Type</label>
        <picklist>
            <picklistValues>
                <fullName>ID Card/Driving Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Officer Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Info_Source__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Source of information for this person, i.e. how we know of this person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Info Source</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outdoor Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper/Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Exhibition Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Mobile Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Info_Sub_Source__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Subsource of information for this person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Info Sub-Source</label>
        <picklist>
            <controllingField>Info_Source__c</controllingField>
            <picklistValues>
                <fullName>Mercedes-Benz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Query Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Exhibition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party (Partner) email contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Telecom/189 email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer email contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz Electronic Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Ritz Carlton Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer telephone contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Telephone Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party (Partner) Mail_Minsheng Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products range cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party (Partner) Mail _Bank of Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure &amp; Price List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer message contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Message Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Benz Message Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Job title; Position in their company 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_JobTitle&quot;</description>
        <label>Job</label>
        <picklist>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Call_Extension_Number__c</fullName>
        <description>To record the last successful call time for extension number of the customer</description>
        <label>Last Successful Call (Extension Number)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Call_Home_Phone__c</fullName>
        <description>To record the last successful call time for home phone of the customer</description>
        <label>Last Successful Call (Home Phone)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Call_Mobile__c</fullName>
        <description>To record the last successful call time for mobile of the customer</description>
        <label>Last Successful Call (Mobile)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Call_Office_Phone__c</fullName>
        <description>To record the last successful call time for office phone of the customer</description>
        <label>Last Successful Call (Office Phone)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Call_Second_Mobile__c</fullName>
        <description>To record the last successful call time for second mobile of the customer</description>
        <label>Last Successful Call (Second Mobile)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Call__c</fullName>
        <description>To record the last successful call time of the customer</description>
        <label>Last Successful Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Sales_Dealer__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Latest Sales Dealer for this contact 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_LatestSalesDealer&quot;</description>
        <label>Latest Sales Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Latest Sales Dealers (Account))</relationshipLabel>
        <relationshipName>Sales_Dealers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latest_Service_Dealer__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Latest Aftersales Dealer for this contact 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_LatestAftersalesDealer&quot;</description>
        <label>Latest Service Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Latest Service Dealers (Account))</relationshipLabel>
        <relationshipName>Service_Dealers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Dealer__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Main Aftersales Dealer for this contact 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_MainDealer&quot;</description>
        <label>Main Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Main Dealer)</relationshipLabel>
        <relationshipName>Main_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Martial_Status__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Customer&apos;s marital status 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_MaritalStatus&quot;</description>
        <label>Martial Status</label>
        <picklist>
            <picklistValues>
                <fullName>0=Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1=Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2=Divorced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3=Married w/ Child(ren)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4=Married w/o Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5=Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Master_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Master record of a suspected duplicates group to be flaged by EP</description>
        <label>Master Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: The person&apos;s profession 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_Occupation&quot;</description>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Office, enterprise and public institution responsible officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professionals &amp; Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business, Service staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Industry (Farming, Fishing, Forestry etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacture, transport equipment operation staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soldier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME&lt;10ppl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME&gt;10ppl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise management personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise common clerk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Hobby__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Hobbies, Interests, free text from DMS info 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <label>Other Hobby</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Postal_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Stop All Postal contact for this person 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_StopPostal&quot;</description>
        <label>Postal Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Preferred method of contact 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_PreferredContactMethod&quot;</description>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Preferred time to call the contact 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_PreferredContactTime&quot;</description>
        <label>Preferred Contact Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Preferred language of individual 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Contact is &quot;Contact_PreferredLanguage &quot;</description>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>Mandarin Chinese</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cantonese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Validity__c</fullName>
        <description>To flag whether the primary address is valid</description>
        <label>Primary Address Validity</label>
        <picklist>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blacklisted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <description>Primary address of the customer maintained by CAC user</description>
        <label>Primary Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Dealer Province Name in English and translated in Chinese 
Used in: Page Layouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Address is &quot;Address_Province&quot;
Attribute in Data Dictionary object Dealer is &quot;Dealer_ProvinceEN&quot;</description>
        <label>Province</label>
        <picklist>
            <picklistValues>
                <fullName>Anhui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiangsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zhejiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heilongjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jilin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liaoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inner Mongolia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ningxia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qinghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shandong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shaanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tianjin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tibet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xinjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gansu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sichuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yunnan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chongqing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangdong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guizhou</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>